Refactor URL validation method for improved clarity and error handling